<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ur5_us_bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="sleonard@jhu.edu">sleonard</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>ur_description</depend>
  <depend>xacro</depend>
  <depend>c5_2_60_description</depend>
  <depend>controller_manager</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>ros_gz_sim</depend>
  <depend>ros_ign_bridge</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
